# atlifly

./: Makefile  README.md  pyproject.toml
src/atlifly/: __init__.py
src/atlifly/cli/: __init__.py  exam_score.py  latex_build.py  random_order.py
src/atlifly/scripts/: latex_build.bash
