[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "atlifly"
version = "0.1.0"
description = "A collection of CLI tools to make life easier"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]

[project.scripts]
# Add your CLI tools here - each line creates a command
random-order = "atlifly.cli.random_order:main"
latex-build = "atlifly.cli.latex_build:main"
exam-score = "atlifly.cli.exam_score:main"

[tool.hatch.build.targets.wheel]
packages = ["src/atlifly"]
include = ["src/atlifly/scripts/latex_build.bash"]

[tool.hatch.build.targets.sdist]
include = ["src/atlifly/scripts/latex_build.bash"]
